--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
          
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+          <h1 id="project_title">{{ ThePMJournal }}</h1>
+          <h2 id="project_tagline">{{ Issues in Project Management Amid the Pandemic }}</h2>
           
           {% if site.show_downloads %}
           <section id="downloads">
@@ -39,7 +39,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         {% if site.github.is_project_page %}
-        <p class="copyright">{{ site.title | default: site.github.repository_name }} © 2009 Abhinav Manocha, Michael Straughan, Sabrina Chapados-Wlodarczyk </p>
+        <p class="copyright">{{ site.title | default: site.github.repository_name }} © 2020 Abhinav Manocha, Michael Straughan, Sabrina Chapados-Wlodarczyk </p>
         {% endif %}
       </footer>
     </div>
