--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
          
-          <h1 id="project_title">{{ ThePMJournal }}</h1>
-          <h2 id="project_tagline">{{ Issues in Project Management Amid the Pandemic }}</h2>
+          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
+          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
           
           {% if site.show_downloads %}
           <section id="downloads">
