change in footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         {% if site.github.is_project_page %}
-        <p class="copyright">{{ site.title | default: site.github.repository_name }} © 2020 Abhinav Manocha, Michael Straughan, Sabrina Chapados-Wlodarczyk </p>
+        <p class="copyright">{{ site.title | default: site.github.repository_name }} © 2020 Abhinav Manocha, Michael Straughan, Sabrina Chapados-Wlodarczyk *Opinions expressed on this website do not represent the views of Trent University*</p>
         {% endif %}
       </footer>
     </div>
