Changing the download link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
           
           {% if site.show_downloads %}
           <section id="downloads">
-            <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
+            <a class="zip_download_link" href="{{ https://abhinavmanocha.github.io/3850Project/ }}"> </a>
           </section>
         {% endif %}
           
